Use a new Result type for parser errors.

--- a/cmd/CMakeLists.txt
+++ b/cmd/CMakeLists.txt
@@ -1,7 +1,7 @@
 # TODO this executable should link against the dynamic or static libraries
-add_executable(exec main.cpp)
-target_compile_options(exec PRIVATE ${GLOBAL_COMPILE_FLAGS})
-target_link_libraries(exec PRIVATE hammer_objects)
+add_executable(run main.cpp)
+target_compile_options(run PRIVATE ${GLOBAL_COMPILE_FLAGS})
+target_link_libraries(run PRIVATE hammer_objects)
 
 # TODO this is gcc specific
-target_link_libraries(exec PRIVATE -lstdc++fs)
+target_link_libraries(run PRIVATE -lstdc++fs)
