Consistent naming for tokens and operators.

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ Thumbs.db
 *.user*
 
 # visual studio code
+*.code-workspace
 *.vscode/
 *.devcontainer/**
 !.devcontainer/recommended-devcontainer.json
