--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ Thumbs.db
 *.devcontainer/**
 !.devcontainer/recommended-devcontainer.json
 !.devcontainer/recommended-Dockerfile
+!.devcontainer/README.md
 
 # xemacs temporary files
 *.flc
