Implement code point -> general category lookup.
Category mappings are provided by an auto-generated file.

--- a/lib/hammer/core/CMakeLists.txt
+++ b/lib/hammer/core/CMakeLists.txt
@@ -11,8 +11,11 @@ target_sources(hammer_objects
         scope_exit.hpp
         span.hpp
         type_traits.hpp
+        unicode.hpp
 
     PRIVATE
         arena.cpp
         defs.cpp
+        unicode.cpp
+        unicode_data.cpp
 )
