Add cmake extension to recommended list.

--- a/.devcontainer/recommended-devcontainer.json
+++ b/.devcontainer/recommended-devcontainer.json
@@ -27,6 +27,7 @@
 	// "postCreateCommand": "",
 	// Add the IDs of extensions you want installed when the container is created in the array below.
 	"extensions": [
-		"ms-vscode.cpptools"
+		"ms-vscode.cpptools",
+		"twxs.cmake"
 	]
 }
