First (incomplete) draft for the c api.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
     message(STATUS "This is the master project, CMake version: ${CMAKE_VERSION}")
 endif()
 
-project(hammer VERSION 0.1.0 LANGUAGES CXX)
+project(hammer VERSION 0.1.0 LANGUAGES CXX C)
 
 option(HAMMER_LTO "Enable link time optimization (if supported)." OFF)
 option(HAMMER_COV "Code coverage analysis. Build mode should be Debug." OFF)
