--- a/lib/hammer/core/CMakeLists.txt
+++ b/lib/hammer/core/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(hammer_objects
         arena.hpp
         byte_order.hpp
         casting.hpp
+        code_points.hpp
         defs.hpp
         hash.hpp
         iter_range.hpp
