--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(unit_tests
     vm/function.cpp
     vm/hash_table.cpp
     vm/heap.cpp
+    vm/native_object.cpp
     vm/small_integer.cpp
     vm/string.cpp
     vm/value.cpp
