--- a/src/hammer/vm/CMakeLists.txt
+++ b/src/hammer/vm/CMakeLists.txt
@@ -1,23 +1,17 @@
 target_sources(hammer_objects
     PRIVATE
-        collector.hpp
         context.hpp
         context.ipp
         fwd.hpp
-        handles.hpp
         hash.hpp
-        heap.hpp
         interpreter.hpp
         load.hpp
         math.hpp
         types.hpp
 
     PRIVATE
-        collector.cpp
         context.cpp
-        handles.cpp
         hash.cpp
-        heap.cpp
         interpreter.cpp
         load.cpp
         math.cpp
@@ -25,4 +19,5 @@ target_sources(hammer_objects
 )
 
 add_subdirectory(builtin)
+add_subdirectory(heap)
 add_subdirectory(objects)
