Implement dynamic objects.
These are objects with arbitray properties (they are created on demand
and removed by assigning null), similar to javascript objects. These will
eventually be replaced by real classes, but they are a necessary evil for
early prototypes.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(unit_tests
     compiler/token.cpp
 
     vm/arrays.cpp
+    vm/classes.cpp
     vm/collector.cpp
     vm/context.cpp
     vm/coroutine.cpp
