Create a ModuleBuilder class to make defining builtin modules easier.

--- a/src/hammer/vm/builtin/CMakeLists.txt
+++ b/src/hammer/vm/builtin/CMakeLists.txt
@@ -1,7 +1,8 @@
 target_sources(hammer_objects
     PRIVATE
+        modules.hpp
         std.cpp
 
-    PRIVATE
-        std.hpp
+        module_builder.hpp
+        module_builder.cpp
 )
