Work on the io module.

--- a/src/hammer/vm/objects/CMakeLists.txt
+++ b/src/hammer/vm/objects/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(hammer_objects
         arrays.cpp
 
         buffers.hpp
+        buffers.ipp
         buffers.cpp
 
         classes.hpp
