Working towards tuple unpacking.

--- a/src/hammer/core/CMakeLists.txt
+++ b/src/hammer/core/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(hammer_objects
         code_point_range.hpp
         defs.cpp
         defs.hpp
+        function_ref.hpp
         hash.hpp
         iter_range.hpp
         math.hpp
