Separate type checking and elimination of unobserved values.

--- a/src/hammer/compiler/semantics/CMakeLists.txt
+++ b/src/hammer/compiler/semantics/CMakeLists.txt
@@ -2,6 +2,8 @@ target_sources(hammer_objects
     PRIVATE
         analyzer.cpp
         analyzer.hpp
+        expr_analyzer.cpp
+        expr_analyzer.hpp
         scope_builder.cpp
         scope_builder.hpp
         semantic_checker.cpp
@@ -12,6 +14,6 @@ target_sources(hammer_objects
         symbol_resolver.hpp
         symbol_table.cpp
         symbol_table.hpp
-        type_checker.cpp
-        type_checker.hpp
+        type_analyzer.cpp
+        type_analyzer.hpp
 )
