--- a/test/compiler/CMakeLists.txt
+++ b/test/compiler/CMakeLists.txt
@@ -1,12 +1,10 @@
 target_sources(unit_tests
     PRIVATE
-        lexer.cpp
-        parser.cpp
-        simplifier.cpp
         source_map.cpp
         string_table.cpp
         test_parser.hpp
-        token.cpp
 )
 
 add_subdirectory(codegen) 
+add_subdirectory(semantics)
+add_subdirectory(syntax)
