Testing and bugfixing.

--- a/test/compiler/semantics/CMakeLists.txt
+++ b/test/compiler/semantics/CMakeLists.txt
@@ -1,4 +1,6 @@
 target_sources(unit_tests
     PRIVATE
+        expr_analyzer_test.cpp
         simplifier_test.cpp
+        type_analyzer_test.cpp
 )
