Make byte order implementation ready for windows (not tested yet).

--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(unit_tests
     PRIVATE
         arena_test.cpp
+        byte_order_test.cpp
         function_ref_test.cpp
         math_test.cpp
         overloaded_test.cpp
