Move catch dependency into its own target and folder.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(unit_tests
 
 target_compile_options(unit_tests PRIVATE ${GLOBAL_COMPILE_FLAGS})
 target_link_libraries(unit_tests PRIVATE tiro_objects)
-target_include_directories(unit_tests PRIVATE "${PROJECT_SOURCE_DIR}/deps")
+target_link_libraries(unit_tests PRIVATE catch)
 
 add_subdirectory(compiler)
 add_subdirectory(core)
